--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <div class="info">
             <a href="person1.html">Person 1 Information</a>
             <a href="person2.html">Person 2 Information</a>
+            <a href="person3.html">Person 2 Information</a>
+            <a href="person4.html">Person 2 Information</a>
             <!-- Добавьте больше ссылок для других людей -->
         </div>
     </div>
