--- a/person1.html
+++ b/person1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Person 1 Information</title>
+    <title>Person Information</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,36 +34,37 @@
         .info p {
             margin: 5px 0;
         }
+        .info input[type="text"],
+        .info input[type="date"],
+        .info input[type="number"] {
+            width: calc(100% - 10px);
+            margin: 5px 0;
+            padding: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .info input[type="file"] {
+            margin-top: 5px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Person 1 Information</h1>
+        <h1>Person Information</h1>
         <div class="info">
-            <h3>Common</h3>
-            <p><strong>Program:</strong> Эконом прямой MCX</p>
+            <h3>Photo</h3>
+            <input type="file" accept="image/*">
         </div>
         <div class="info">
-            <h3>Departure from Russia</h3>
-            <p><strong>Flight:</strong> D-01-A (MCX-JED)</p>
-            <p><strong>Group:</strong> D-01-A-1</p>
-            <p><strong>Flight number:</strong> J9-1351</p>
-            <p><strong>Departure:</strong> MCX MAKHACHKALA 17.05.2024 23:30</p>
-        </div>
-        <div class="info">
-            <h3>Return to Russia</h3>
-            <p><strong>Flight:</strong> D-01-B (MED-MCX)</p>
-            <p><strong>Group:</strong> D-01-B-1</p>
-            <p><strong>Flight number:</strong> J9-1399</p>
-            <p><strong>Departure:</strong> MED MADINAH 29.06.2024 14:30</p>
-        </div>
-        <div class="info">
-            <h3>Contacts</h3>
-            <p><strong>Russia:</strong> +88005577676</p>
-            <p><strong>Medina:</strong> +9663577167</p>
-            <p><strong>Makkah:</strong> +9663577164</p>
+            <h3>Personal Details</h3>
+            <p><strong>Фамилия:</strong> <input type="text" name="lastname"></p>
+            <p><strong>Имя:</strong> <input type="text" name="firstname"></p>
+            <p><strong>Отчество:</strong> <input type="text" name="middlename"></p>
+            <p><strong>Дата рождения:</strong> <input type="date" name="birthdate"></p>
+            <p><strong>Пол:</strong> <input type="text" name="gender"></p>
+            <p><strong>Страна:</strong> <input type="text" name="country"></p>
+            <p><strong>Паспорт No.:</strong> <input type="text" name="passport"></p>
         </div>
     </div>
 </body>
 </html>
-
