--- a/person2.html
+++ b/person2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Person 1 Information</title>
+    <title>Person Information</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,34 +34,30 @@
         .info p {
             margin: 5px 0;
         }
+        .info img {
+            display: block;
+            margin: 0 auto;
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Person 1 Information</h1>
+        <h1>Person Information</h1>
         <div class="info">
-            <h3>Common</h3>
-            <p><strong>Program:</strong> Эконом прямой MCX</p>
+            <h3>Photo</h3>
+            <img src="18c7af44-fdee-4062-99cb-7e3f380df380.jpg" alt="Photo">
         </div>
         <div class="info">
-            <h3>Departure from Russia</h3>
-            <p><strong>Flight:</strong> D-01-A (MCX-JED)</p>
-            <p><strong>Group:</strong> D-01-A-1</p>
-            <p><strong>Flight number:</strong> J9-1351</p>
-            <p><strong>Departure:</strong> MCX MAKHACHKALA 17.05.2024 23:30</p>
-        </div>
-        <div class="info">
-            <h3>Return to Russia</h3>
-            <p><strong>Flight:</strong> D-01-B (MED-MCX)</p>
-            <p><strong>Group:</strong> D-01-B-1</p>
-            <p><strong>Flight number:</strong> J9-1399</p>
-            <p><strong>Departure:</strong> MED MADINAH 29.06.2024 14:30</p>
-        </div>
-        <div class="info">
-            <h3>Contacts</h3>
-            <p><strong>Russia:</strong> +88005577676</p>
-            <p><strong>Medina:</strong> +9663577167</p>
-            <p><strong>Makkah:</strong> +9663577164</p>
+            <h3>Personal Details</h3>
+            <p><strong>Last Name:</strong> GAZAMOV</p>
+            <p><strong>First Name:</strong> KURBANZHAN</p>
+            <p><strong>Date of Birth:</strong> 18/09/1983</p>
+            <p><strong>Gender:</strong> Male</p>
+            <p><strong>Country:</strong> KYRGYZ REPUBLIC</p>
+            <p><strong>Passport No.:</strong> 21809198301520</p>
         </div>
     </div>
 </body>
