--- a/person1.html
+++ b/person1.html
@@ -40,6 +40,7 @@
             max-width: 100%;
             height: auto;
             border-radius: 8px;
+            max-height: 300px; /* Ограничение максимальной высоты изображения */
         }
     </style>
 </head>
@@ -48,16 +49,17 @@
         <h1>Person Information</h1>
         <div class="info">
             <h3>Photo</h3>
-            <img src="18c7af44-fdee-4062-99cb-7e3f380df380.jpg" alt="Photo">
+            <img src="image_link" alt="Photo">
         </div>
         <div class="info">
             <h3>Personal Details</h3>
-            <p><strong>Last Name:</strong> GAZAMOV</p>
-            <p><strong>First Name:</strong> KURBANZHAN</p>
-            <p><strong>Date of Birth:</strong> 18/09/1983</p>
+            <p><strong>Last Name:</strong> Smith</p>
+            <p><strong>First Name:</strong> John</p>
+            <p><strong>Middle Name:</strong> Michael</p>
+            <p><strong>Date of Birth:</strong> 01/01/1990</p>
             <p><strong>Gender:</strong> Male</p>
-            <p><strong>Country:</strong> KYRGYZ REPUBLIC</p>
-            <p><strong>Passport No.:</strong> 21809198301520</p>
+            <p><strong>Country:</strong> United States</p>
+            <p><strong>Passport No.:</strong> 123456789</p>
         </div>
     </div>
 </body>
