--- a/person1.html
+++ b/person1.html
@@ -49,7 +49,7 @@
         <h1>Person Information</h1>
         <div class="info">
             <h3>Photo</h3>
-            <img src="image_link" alt="Photo">
+            <img src="18c7af44-fdee-4062-99cb-7e3f380df380.jpg" alt="Photo">
         </div>
         <div class="info">
             <h3>Personal Details</h3>
