--- a/person1.html
+++ b/person1.html
@@ -5,7 +5,7 @@
         <h1>Person Information</h1>
         <div class="info">
             <h3>Photo</h3>
-            <img src="18c7af44-fdee-4062-99cb-7e3f380df380.jpg" alt="Photo">
+            <img src="1.pdf" alt="Photo">
         </div>
     </div>
 </body>
