--- a/person2.html
+++ b/person2.html
@@ -1,63 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Person Information</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            border-radius: 8px;
-        }
-        h1, h2 {
-            text-align: center;
-            color: #007BFF;
-        }
-        .info {
-            margin-bottom: 20px;
-        }
-        .info h3 {
-            margin-bottom: 10px;
-            color: #007BFF;
-        }
-        .info p {
-            margin: 5px 0;
-        }
-        .info img {
-            display: block;
-            margin: 0 auto;
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-    </style>
-</head>
 <body>
     <div class="container">
         <h1>Person Information</h1>
         <div class="info">
             <h3>Photo</h3>
-            <img src="18c7af44-fdee-4062-99cb-7e3f380df380.jpg" alt="Photo">
-        </div>
-        <div class="info">
-            <h3>Personal Details</h3>
-            <p><strong>Last Name:</strong> GAZAMOV</p>
-            <p><strong>First Name:</strong> KURBANZHAN</p>
-            <p><strong>Date of Birth:</strong> 18/09/1983</p>
-            <p><strong>Gender:</strong> Male</p>
-            <p><strong>Country:</strong> KYRGYZ REPUBLIC</p>
-            <p><strong>Passport No.:</strong> 21809198301520</p>
+            <img src="2.pdf" alt="Photo">
         </div>
     </div>
 </body>
