--- a/person2.html
+++ b/person2.html
@@ -3,26 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Viewer</title>
+    <title>PDF-like Page</title>
     <style>
         body {
             margin: 0;
             padding: 0;
+            background-color: #f0f0f0;
         }
-        .pdf-container {
-            width: 100vw;
-            height: 100vh;
-        }
-        .pdf-object {
-            width: 100%;
-            height: 100%;
+        .pdf-like-image {
+            display: block;
+            margin: 0 auto;
+            max-width: 100%;
         }
     </style>
 </head>
 <body>
-    <div class="pdf-container">
-        <embed class="pdf-object" src="2.pdf" type="application/pdf" />
-    </div>
+    <img class="pdf-like-image" src="2.png" alt="PDF-like Image">
 </body>
 </html>
-
