--- a/person4.html
+++ b/person4.html
@@ -3,26 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Viewer</title>
+    <title>Fullscreen Image</title>
     <style>
-        body {
+        body, html {
             margin: 0;
             padding: 0;
+            height: 100%;
+            overflow: hidden;
         }
-        .pdf-container {
+        .fullscreen-image {
             width: 100vw;
             height: 100vh;
-        }
-        .pdf-object {
-            width: 100%;
-            height: 100%;
+            object-fit: cover; /* Сохранение пропорций изображения */
         }
     </style>
 </head>
 <body>
-    <div class="pdf-container">
-        <embed class="pdf-object" src="4.pdf" type="application/pdf" />
-    </div>
+    <img class="fullscreen-image" src="4.png" alt="Fullscreen Image">
 </body>
 </html>
-
