--- a/person1.html
+++ b/person1.html
@@ -86,8 +86,8 @@
         <div class="profile">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Russia.svg/1920px-Flag_of_Russia.svg.png" alt="Flag of Russia">
             <img src="profile.jpg" alt="Profile Photo">
-            <p id="name">ABDULAZIZOV MAGOMED</p>
-            <p id="id">ID: SHR-1401253d63d91f5a6711899dfa</p>
+            <p id="name">ГАЗАМОВ КУРБАН</p>
+            <p id="id">ID: 21809198301520</p>
             <p id="country">Russia</p>
         </div>
         <div class="details">
@@ -117,8 +117,8 @@
         const translations = {
             ru: {
                 navbar: 'Информация о паломнике',
-                name: 'АБДУЛАЗИЗОВ МАГОМЕД',
-                id: 'ID: SHR-1401253d63d91f5a6711899dfa',
+                name: 'ГАЗАМОВ КУРБАН',
+                id: 'ID: 21809198301520',
                 country: 'Россия',
                 commonHeader: 'Общее',
                 programLabel: 'Программа:',
@@ -149,8 +149,8 @@
             },
             en: {
                 navbar: 'Information about the Pilgrim',
-                name: 'ABDULAZIZOV MAGOMED',
-                id: 'ID: SHR-1401253d63d91f5a6711899dfa',
+                name: 'GAZAMOV KURBAN',
+                id: 'ID: 21809198301520',
                 country: 'Russia',
                 commonHeader: 'General',
                 programLabel: 'Program:',
@@ -181,8 +181,8 @@
             },
             ar: {
                 navbar: 'معلومات عن الحاج',
-                name: 'عبد العزيز ماجوميد',
-                id: 'معرف: SHR-1401253d63d91f5a6711899dfa',
+                name: 'غازاموف كربان',
+                id: 'معرف: 21809198301520',
                 country: 'روسيا',
                 commonHeader: 'عام',
                 programLabel: 'برنامج:',
