--- a/person1.html
+++ b/person1.html
@@ -85,7 +85,7 @@
     <div class="container">
         <div class="profile">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Russia.svg/1920px-Flag_of_Russia.svg.png" alt="Flag of Russia">
-            <img src="photo_1" alt="Profile Photo">
+            <img src="photo_1.png" alt="Profile Photo">
             <p id="name">ГАЗАМОВ КУРБАН</p>
             <p id="id">ID: 21809198301520</p>
             <p id="country">Russia</p>
