--- a/person1.html
+++ b/person1.html
@@ -84,8 +84,9 @@
     </div>
     <div class="container">
         <div class="profile">
+            <!-- Замените URL в src на путь к новому фото -->
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Russia.svg/1920px-Flag_of_Russia.svg.png" alt="Flag of Russia">
-            <img src="photo_1.png" alt="Profile Photo">
+            <img src="path/to/your/new/profile.jpg" alt="Profile Photo">
             <p id="name">ГАЗАМОВ КУРБАН</p>
             <p id="id">ID: 21809198301520</p>
             <p id="country">Russia</p>
