--- a/person1.html
+++ b/person1.html
@@ -47,14 +47,16 @@
             flex: 1 1 100%;
         }
         .profile .flag {
-            width: 150px;
-            height: auto;
-            margin: 10px 0;
-        }
-        .profile .photo {
-            width: 150px;
-            height: auto;
-            margin: 10px 0;
+    width: 100px; /* Измените размер, если необходимо */
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.profile .photo {
+    width: 150px; /* Измените размер, если необходимо */
+    height: auto;
+    margin: 10px 0;
+}
         }
         .profile p {
             margin: 5px 0;
@@ -89,13 +91,13 @@
     </div>
     <div class="container">
         <div class="profile">
-            <!-- Замените URL в src на путь к новому фото -->
-            <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Russia.svg/1920px-Flag_of_Russia.svg.png" alt="Flag of Russia">
-            <img class="photo" src="photo_1.png" alt="Profile Photo">
-            <p id="name">ГАЗАМОВ КУРБАН</p>
-            <p id="id">ID: 21809198301520</p>
-            <p id="country">Russia</p>
-        </div>
+    <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Russia.svg/1920px-Flag_of_Russia.svg.png" alt="Flag of Russia">
+    <img class="photo" src="/mnt/data/image.png" alt="Profile Photo">
+    <p id="name">ГАЗАМОВ КУРБАН</p>
+    <p id="id">ID: 21809198301520</p>
+    <p id="country">Россия</p>
+</div>
+
         <div class="details">
             <h3 id="common-header">General</h3>
             <p><strong id="program-label">Program:</strong> <span id="program">Econom direct MCX</span></p>
