--- a/person1.html
+++ b/person1.html
@@ -45,18 +45,19 @@
         .profile {
             text-align: center;
             flex: 1 1 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         .profile .flag {
-    width: 100px; /* Измените размер, если необходимо */
-    height: auto;
-    margin-bottom: 10px;
-}
-
-.profile .photo {
-    width: 150px; /* Измените размер, если необходимо */
-    height: auto;
-    margin: 10px 0;
-}
+            width: 150px;
+            height: auto;
+            margin-bottom: 10px;
+        }
+        .profile .photo {
+            width: 150px;
+            height: auto;
+            margin-bottom: 10px;
         }
         .profile p {
             margin: 5px 0;
@@ -91,13 +92,12 @@
     </div>
     <div class="container">
         <div class="profile">
-    <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Russia.svg/1920px-Flag_of_Russia.svg.png" alt="Flag of Russia">
-    <img class="photo" src="photo_1.png" alt="Profile Photo">
-    <p id="name">ГАЗАМОВ КУРБАН</p>
-    <p id="id">ID: 21809198301520</p>
-    <p id="country">Россия</p>
-</div>
-
+            <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Russia.svg/1920px-Flag_of_Russia.svg.png" alt="Flag of Russia">
+            <img class="photo" src="/mnt/data/image.png" alt="Profile Photo">
+            <p id="name">ГАЗАМОВ КУРБАН</p>
+            <p id="id">ID: 21809198301520</p>
+            <p id="country">Россия</p>
+        </div>
         <div class="details">
             <h3 id="common-header">General</h3>
             <p><strong id="program-label">Program:</strong> <span id="program">Econom direct MCX</span></p>
@@ -108,7 +108,7 @@
             <p><strong id="departure-label">Departure:</strong> <span id="departure-russia">MCX MAKHACHKALA 17.05.2024 23:30</span></p>
             <h3 id="departure-saudi-header">Departure from KSA</h3>
             <p><strong id="flight-label-saudi">Flight:</strong> <span id="flight-saudi">D-01-B (MED-MCX)</span></p>
-            <p><strong id="group-label-saudi">Group:</strong> <span id="group-saudi">D-01-B-1</p>
+            <p><strong id="group-label-saudi">Group:</strong> <span id="group-saudi">D-01-B-1</span></p>
             <p><strong id="flight-number-label-saudi">Flight number:</strong> <span id="flight-number-saudi">J9-1399</span></p>
             <p><strong id="departure-label-saudi">Departure:</strong> <span id="departure-saudi">MED MADINAH 29.06.2024 14:30</span></p>
         </div>
@@ -257,6 +257,9 @@
             document.getElementById('medina-contact-label').innerHTML = translations[lang].medinaContactLabel;
             document.getElementById('mecca-contact-label').innerHTML = translations[lang].meccaContactLabel;
         }
+
+        // Set default language to English
+        setLanguage('en');
     </script>
 </body>
 </html>
