--- a/person2.html
+++ b/person2.html
@@ -1,24 +1,284 @@
+Конечно, вот полный HTML и CSS код с обновленными данными:
+
+### HTML
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fullscreen Image</title>
+    <title>Information Page</title>
     <style>
-        body, html {
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #eef1f5;
             margin: 0;
             padding: 0;
-            height: 100%;
-            overflow: hidden;
         }
-        .fullscreen-image {
-            width: 100vw;
-            height: 100vh;
-            object-fit: cover; /* Сохранение пропорций изображения */
+        .navbar {
+            background-color: #35475e;
+            padding: 10px;
+            color: #fff;
+            text-align: center;
+            font-size: 24px;
+        }
+        .language-bar {
+            background-color: #5a6b82;
+            text-align: center;
+            padding: 5px 0;
+        }
+        .language-bar a {
+            color: #fff;
+            margin: 0 10px;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin: 20px;
+        }
+        .profile, .details, .contacts {
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            border-radius: 8px;
+            margin: 10px;
+        }
+        .profile {
+            text-align: center;
+            flex: 1 1 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .profile .flag {
+            width: 150px;
+            height: auto;
+            margin-bottom: 10px;
+        }
+        .profile .photo {
+            width: 150px;
+            height: auto;
+            margin-bottom: 10px;
+        }
+        .profile p {
+            margin: 5px 0;
+        }
+        .details, .contacts {
+            flex: 1 1 45%;
+        }
+        .details h3, .contacts h3 {
+            border-bottom: 1px solid #ddd;
+            padding-bottom: 10px;
+            margin-bottom: 10px;
+        }
+        .details p, .contacts p {
+            margin: 5px 0;
+        }
+        @media (max-width: 768px) {
+            .container {
+                flex-direction: column;
+                align-items: center;
+            }
+            .details, .contacts {
+                flex: 1 1 100%;
+                margin: 10px 0;
+            }
         }
     </style>
 </head>
 <body>
-    <img class="fullscreen-image" src="2.png" alt="Fullscreen Image">
+    <div class="navbar" id="navbar">Information about the Pilgrim</div>
+    <div class="language-bar">
+        <a id="lang-ru">Русский</a> | <a id="lang-en">English</a> | <a id="lang-ar">العربية</a>
+    </div>
+    <div class="container">
+        <div class="profile">
+            <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Russia.svg/1920px-Flag_of_Russia.svg.png" alt="Flag of Russia">
+            <img class="photo" src="photo_2.png" alt="Profile Photo">
+            <p id="name">ТУРСУНОВ АЗИМЖАН</p>
+            <p id="dob">Дата рождения: 21/02/1968</p>
+            <p id="id">ID: 2210216800387</p>
+            <p id="country">Россия</p>
+        </div>
+        <div class="details">
+            <h3 id="common-header">General</h3>
+            <p><strong id="program-label">Program:</strong> <span id="program">Econom direct MCX</span></p>
+            <h3 id="departure-russia-header">Departure from Russia</h3>
+            <p><strong id="flight-label">Flight:</strong> <span id="flight-russia">D-01-A (MCX-JED)</span></p>
+            <p><strong id="group-label">Group:</strong> <span id="group-russia">D-01-A-1</span></p>
+            <p><strong id="flight-number-label">Flight number:</strong> <span id="flight-number-russia">J9-1351</span></p>
+            <p><strong id="departure-label">Departure:</strong> <span id="departure-russia">MCX MAKHACHKALA 17.05.2024 23:30</span></p>
+            <h3 id="departure-saudi-header">Departure from KSA</h3>
+            <p><strong id="flight-label-saudi">Flight:</strong> <span id="flight-saudi">D-01-B (MED-MCX)</span></p>
+            <p><strong id="group-label-saudi">Group:</strong> <span id="group-saudi">D-01-B-1</span></p>
+            <p><strong id="flight-number-label-saudi">Flight number:</strong> <span id="flight-number-saudi">J9-1399</span></p>
+            <p><strong id="departure-label-saudi">Departure:</strong> <span id="departure-saudi">MED MADINAH 29.06.2024 14:30</span></p>
+        </div>
+        <div class="contacts">
+            <h3 id="company-name">Marwa Tour<br><small>hajj company</small></h3>
+            <p><strong id="contacts-header">Contacts</strong></p>
+            <p><strong id="russia-contact-label">Russia:</strong> +88005577676</p>
+            <p><strong id="medina-contact-label">Medina:</strong> +9663577167</p>
+            <p><strong id="mecca-contact-label">Mecca:</strong> +9663577164</p>
+        </div>
+    </div>
+
+    <script>
+        const translations = {
+            ru: {
+                navbar: 'Информация о паломнике',
+                name: 'ТУРСУНОВ АЗИМЖАН',
+                dob: 'Дата рождения: 21/02/1968',
+                id: 'ID: 2210216800387',
+                country: 'Россия',
+                commonHeader: 'Общее',
+                programLabel: 'Программа:',
+                program: 'Эконом прямой MCX',
+                departureRussiaHeader: 'Вылет из РФ',
+                flightLabel: 'Рейс:',
+                flightRussia: 'D-01-A (MCX-JED)',
+                groupLabel: 'Группа:',
+                groupRussia: 'D-01-A-1',
+                flightNumberLabel: 'Номер рейса:',
+                flightNumberRussia: 'J9-1351',
+                departureLabel: 'Вылет:',
+                departureRussia: 'MCX МАХАЧКАЛА 17.05.2024 23:30',
+                departureSaudiHeader: 'Вылет из KSA',
+                flightLabelSaudi: 'Рейс:',
+                flightSaudi: 'D-01-B (MED-MCX)',
+                groupLabelSaudi: 'Группа:',
+                groupSaudi: 'D-01-B-1',
+                flightNumberLabelSaudi: 'Номер рейса:',
+                flightNumberSaudi: 'J9-1399',
+                departureLabelSaudi: 'Вылет:',
+                departureSaudi: 'MED МЕДИНА 29.06.2024 14:30',
+                companyName: 'Марва Тур<br><small>хадж компания</small>',
+                contactsHeader: 'Контакты',
+                russiaContactLabel: 'Россия:',
+                medinaContactLabel: 'Медина:',
+                meccaContactLabel: 'Мекка:'
+            },
+            en: {
+                navbar: 'Information about the Pilgrim',
+                name: 'TURSUNOV AZIMZHAN',
+                dob: 'Date of Birth: 21/02/1968',
+                id: 'ID: 2210216800387',
+                country: 'Russia',
+                commonHeader: 'General',
+                programLabel: 'Program:',
+                program: 'Econom direct MCX',
+                departureRussiaHeader: 'Departure from Russia',
+                flightLabel: 'Flight:',
+                flightRussia: 'D-01-A (MCX-JED)',
+                groupLabel: 'Group:',
+                groupRussia: 'D-01-A-1',
+                flightNumberLabel: 'Flight number:',
+                flightNumberRussia: 'J9-1351',
+                departureLabel: 'Departure:',
+                departureRussia: 'MCX MAKHACHKALA 17.05.2024 23:30',
+                departureSaudiHeader: 'Departure from KSA',
+                flightLabelSaudi: 'Flight:',
+                flightSaudi: 'D-01-B (MED-MCX)',
+                groupLabelSaudi: 'Group:',
+                groupSaudi: 'D-01-B-1',
+                flightNumberLabelSaudi: 'Flight number:',
+                flightNumberSaudi: 'J9-1399',
+                departureLabelSaudi: 'Departure:',
+                departureSaudi: 'MED MADINAH 29.06.2024 14:30',
+                companyName: 'Marwa Tour<br><small>hajj company</small>',
+                contactsHeader: 'Contacts',
+                russiaContactLabel: 'Russia:',
+                medinaContactLabel: 'Medina:',
+
+
+                meccaContactLabel: 'Mecca:'
+            },
+            ar: {
+                navbar: 'معلومات عن الحاج',
+                name: 'تورسنوف عظيمجان',
+                dob: 'تاريخ الميلاد: 21/02/1968',
+                id: 'معرف: 2210216800387',
+                country: 'روسيا',
+                commonHeader: 'عام',
+                programLabel: 'برنامج:',
+                program: 'اقتصاد مباشر MCX',
+                departureRussiaHeader: 'المغادرة من روسيا',
+                flightLabel: 'رحلة:',
+                flightRussia: 'D-01-A (MCX-JED)',
+                groupLabel: 'مجموعة:',
+                groupRussia: 'D-01-A-1',
+                flightNumberLabel: 'رقم الرحلة:',
+                flightNumberRussia: 'J9-1351',
+                departureLabel: 'مغادرة:',
+                departureRussia: 'MCX محج قلعة 17.05.2024 23:30',
+                departureSaudiHeader: 'المغادرة من المملكة العربية السعودية',
+                flightLabelSaudi: 'رحلة:',
+                flightSaudi: 'D-01-B (MED-MCX)',
+                groupLabelSaudi: 'مجموعة:',
+                groupSaudi: 'D-01-B-1',
+                flightNumberLabelSaudi: 'رقم الرحلة:',
+                flightNumberSaudi: 'J9-1399',
+                departureLabelSaudi: 'مغادرة:',
+                departureSaudi: 'MED المدينة المنورة 29.06.2024 14:30',
+                companyName: 'ماروا تور<br><small>شركة حج</small>',
+                contactsHeader: 'جهات الاتصال',
+                russiaContactLabel: 'روسيا:',
+                medinaContactLabel: 'المدينة المنورة:',
+                meccaContactLabel: 'مكة:'
+            }
+        };
+
+        document.getElementById('lang-ru').onclick = () => setLanguage('ru');
+        document.getElementById('lang-en').onclick = () => setLanguage('en');
+        document.getElementById('lang-ar').onclick = () => setLanguage('ar');
+
+        function setLanguage(lang) {
+            document.getElementById('navbar').innerHTML = translations[lang].navbar;
+            document.getElementById('name').innerHTML = translations[lang].name;
+            document.getElementById('dob').innerHTML = translations[lang].dob;
+            document.getElementById('id').innerHTML = translations[lang].id;
+            document.getElementById('country').innerHTML = translations[lang].country;
+            document.getElementById('common-header').innerHTML = translations[lang].commonHeader;
+            document.getElementById('program-label').innerHTML = translations[lang].programLabel;
+            document.getElementById('program').innerHTML = translations[lang].program;
+            document.getElementById('departure-russia-header').innerHTML = translations[lang].departureRussiaHeader;
+            document.getElementById('flight-label').innerHTML = translations[lang].flightLabel;
+            document.getElementById('flight-russia').innerHTML = translations[lang].flightRussia;
+            document.getElementById('group-label').innerHTML = translations[lang].groupLabel;
+            document.getElementById('group-russia').innerHTML = translations[lang].groupRussia;
+            document.getElementById('flight-number-label').innerHTML = translations[lang].flightNumberLabel;
+            document.getElementById('flight-number-russia').innerHTML = translations[lang].flightNumberRussia;
+            document.getElementById('departure-label').innerHTML = translations[lang].departureLabel;
+            document.getElementById('departure-russia').innerHTML = translations[lang].departureRussia;
+            document.getElementById('departure-saudi-header').innerHTML = translations[lang].departureSaudiHeader;
+            document.getElementById('flight-label-saudi').innerHTML = translations[lang].flightLabelSaudi;
+            document.getElementById('flight-saudi').innerHTML = translations[lang].flightSaudi;
+            document.getElementById('group-label-saudi').innerHTML = translations[lang].groupLabelSaudi;
+            document.getElementById('group-saudi').innerHTML = translations[lang].groupSaudi;
+            document.getElementById('flight-number-label-saudi').innerHTML = translations[lang].flightNumberLabelSaudi;
+            document.getElementById('flight-number-saudi').innerHTML = translations[lang].flightNumberSaudi;
+            document.getElementById('departure-label-saudi').innerHTML = translations[lang].departureLabelSaudi;
+            document.getElementById('departure-saudi').innerHTML = translations[lang].departureSaudi;
+            document.getElementById('company-name').innerHTML = translations[lang].companyName;
+            document.getElementById('contacts-header').innerHTML = translations[lang].contactsHeader;
+            document.getElementById('russia-contact-label').innerHTML = translations[lang].russiaContactLabel;
+            document.getElementById('medina-contact-label').innerHTML = translations[lang].medinaContactLabel;
+            document.getElementById('mecca-contact-label').innerHTML = translations[lang].meccaContactLabel;
+        }
+
+        // Set default language to English
+        setLanguage('en');
+    </script>
 </body>
 </html>
+```
+
+Теперь в HTML и JavaScript обновлены данные:
+
+- Фамилия: Турсунов
+- Имя: Азимжан
+- Дата рождения: 21/02/1968
+- ID: 2210216800387
